improved nomenclature generation

--- a/nomenclature.tex
+++ b/nomenclature.tex
@@ -1,166 +1,165 @@
-\nm{$\Klocfrac$}{The field
+\nomenclature{$\Klocfrac$}{The field
 of laurent series valued in $K$; equivalently, the fraction field of
 series valued in $k$; equivalently, the ring of integers of the
 completed local field.}
-\nm{$\Z$}{The ring of integers.}
-\nm{$\Q$}{The rational number field}
-\nm{$\R$}{The real number field}
-\nm{$\C$}{The complex number field}
-\nm{$\Spec{A}, \Specf{A\fpowerser}$}{The respective Prime and formal spectra of the commutative rings $A$ and $A\fpowerser$}
-\nm{$I,\idshf{I}$}{For an ideal $I$ in a commutative ring $A$,
+\nomenclature{$\Z$}{The ring of integers.}
+\nomenclature{$\Q$}{The rational number field}
+\nomenclature{$\R$}{The real number field}
+\nomenclature{$\C$}{The complex number field}
+\nomenclature{$\Spec{A}, \Specf{A\fpowerser}$}{The respective Prime and formal spectra of the commutative rings $A$ and $A\fpowerser$}
+\nomenclature{$I,\idshf{I}$}{For an ideal $I$ in a commutative ring $A$,
 $\idshf{I}$ denotes the associated ideal sheaf on $\Spec{A}$}
-\nm{$\projline$}{The projective line as algebro-geometric object, for
+\nomenclature{$\projline$}{The projective line as algebro-geometric object, for
 example, as represented in the functor-of-points yoga by two copies of $\Z[x]$
 glued along a common $\Z\laurentpoly$ }
-\nm{$\K$}{The abstract total field}
-\nm{$\polyring{R}{n}$}{The ring of $R$-valued polynomials in the
+\nomenclature{$\K$}{The abstract total field}
+\nomenclature{$\polyring{R}{n}$}{The ring of $R$-valued polynomials in the
 formal variables $z_1,\ldots,z_n$ valued in the ring $R$.}
 % TODO clarify distinction between polynomials 'in' and 'over' the $z_i$.
 % what is the same: choose a convention for the symmetric algebra and its dual
-\nm{$ \FnS $}{Function field of a curve $\Sigma$ defined over $\grk$ }
-\nm{$\classgrp{\grk}$}{The class formation group associated to $\grk$.}
-\nm{$\F_p$}{A finite field of $p$ elements; for example the
+\nomenclature{$ \FnS $}{Function field of a curve $\Sigma$ defined over $\grk$ }
+\nomenclature{$\classgrp{\grk}$}{The class formation group associated to $\grk$.}
+\nomenclature{$\F_p$}{A finite field of $p$ elements; for example the
 quotient ring $\Z \ov{\idealgenby{p}}$}
-\nm{$\D = \D_a$}{The formal disc defined over $\grk$ with the
+\nomenclature{$\D = \D_a$}{The formal disc defined over $\grk$ with the
 distinguished $\pt = a$ labeling the origin.}
-\nm{$\Gr$ }{The affine grassmannian of $G$.}
-\nm{$\Ga$}{The additive group as commutative reductive algebraic group}
-\nm{$\Gm$}{The multiplicative group as commutative reductive algebraic group.}
-\nm{$\lpgrass$}{The classical loop grassmannian of $G$.}
-\nm{$\glpgrass$}{The \textit{generalized} loop grassmannian of $G$}
-\nm{$\Flds$}{The Category of Fields}
-\nm{$\cartdual$}{Cartier duality on a category } % TODO say more}
-\nm{$\Mat{n}\grk$}{$n\times n$ matrices with coefficients in $\grk$}
-\nm{$\RH^*$}{Right derived functor of homology}
-\nm{$X\tateshiftedby{n}$}{The $n$th Tate Shift}
-\nm{$\TateCat$}{The tate category associated to a finite
-  abelian group $H$, defined as the categorical quotient
-  $\mathcal{A}^G_{N_G(\mathcal{A}}$}
-\nm{$\B{G}$}{everyone's favourite quotient category}
-\nm{$\ptmod{G}$}{everyone's favourite quotient category}
-%\nm{$\hcoH{G,A,n}$}{blah}
-\nm{$\Vec_{\grk}$}{Category of Vector Spaces over $\grk$}
-\nm{$\divisor{p},\divisoridshf{\divisor{p}}$}{A divisor on some ambient space
+\nomenclature{$\Gr$ }{The affine grassmannian of $G$.}
+\nomenclature{$\Ga$}{The additive group as commutative reductive algebraic group}
+\nomenclature{$\Gm$}{The multiplicative group as commutative reductive algebraic group.}
+\nomenclature{$\lpgrass$}{The classical loop grassmannian of $G$.}
+\nomenclature{$\glpgrass$}{The \textit{generalized} loop grassmannian of $G$}
+\nomenclature{$\Flds$}{The Category of Fields}
+\nomenclature{$\cartdual$}{Cartier duality on a category } % TODO say more}
+\nomenclature{$\Mat{n}\grk$}{$n\times n$ matrices with coefficients in $\grk$}
+\nomenclature{$\RH^*$}{Right derived functor of homology}
+\nomenclature{$X\tateshiftedby{n}$}{The nth Tate Shift}
+\nomenclature{$\TateCat$}{The tate category associated to a group $H$, defined as the
+categorical quotient $\mathcal{A}^G_{N_G(\mc{A})}$} %N_G(\mathcal{A}
+\nomenclature{$\B{G}$}{everyone's favourite quotient category}
+\nomenclature{$\ptmod{G}$}{everyone's favourite quotient category}
+%\nomenclature{$\hcoH{G,A,n}$}{blah}
+\nomenclature{$\Vec_{\grk}$}{Category of Vector Spaces over $\grk$}
+\nomenclature{$\divisor{p},\divisoridshf{\divisor{p}}$}{A divisor on some ambient space
 along with its ideal sheaf}
-\nm{$\AJ$}{The Abel Jacobi map taking a divisor $\divisor{p}$
+\nomenclature{$\AJ$}{The Abel Jacobi map taking a divisor $\divisor{p}$
   supported on a space $X$ to $\AJ: \divisor{p} \mapsto \ringint_{X}
 (-\divisor{p})\divisoridshf{I_{\divisor{p}}}$}
-\nm{$\IndProSch$}{The category of $\Ind$-$\Pro$-Schemes}
-\nm{$\FinIndProSch$}{The category of \textit{finite} $\IndPro$-Schemes}
-\nm{$\FinIndSch$}{The category of \textit{finite} $\Ind$-Schemes}
-\nm{$\A$}{The category of commutative indschemes over a ring $\grk$}
-\nm{$\Zp$}{The inverse limit of the inverse system of rings $\Z \ov{p^n \Z}$,
+\nomenclature{$\IndProSch$}{The category of $\Ind$-$\Pro$-Schemes}
+\nomenclature{$\FinIndProSch$}{The category of \textit{finite} $\IndPro$-Schemes}
+\nomenclature{$\FinIndSch$}{The category of \textit{finite} $\Ind$-Schemes}
+\nomenclature{$\A$}{The category of commutative indschemes over a ring $\grk$}
+\nomenclature{$\Zp$}{The inverse limit of the inverse system of rings $\Z \ov{p^n \Z}$,
 also called the formal completion at the point $p$ in the curve $\Spec{\Z}$}
-\nm{$\Set$}{The (small) category of Sets}
-\nm{$\Set$}{The (small) category of Sets}
-\nm{$\Hilb_{X}$}{The hilbert scheme of $X$ representing the moduli of finite length subschemes of $X$.}
-%\nm{$\shfcoH{X,\shf{I},n}$}{The $n$th cohomology of the sheaf $\shf{I}$ over the space $X$}.
-\nm{$\grpring{Z}{G}$}{The group ring of $G$}
-\nm{$\Bun G$}{The moduli space of $G$ bundles.}
-\nm[coh]{$\dualmod{M}$}{The dual module $\Hom{A}(M,A)$ associated to an object $M \in \ModCat{A}$ for some ring $A$}
-\nm{$\LModCat{A}$}{The category of left modules over a ring $A$.}
-\nm{$\RModCat{A}$}{The category of right modules over a ring $A$.}
-\nm{$\Schemes$}{The category of Schemes}
-\nm{$\NoethSch$}{The category of Noetherian Schemes}
-\nm{$\NoethIntSch$}{The category of Integral Noetherian Schemes}
-\nm{$\Sch{\grk}$}{The category of Schemes defined over $\grk$}
-\nm{$\IndSch{\grk}$}{The category of IndSchemes defined over $\grk$}
-\nm{$\ModCat{A}$}{The category of modules over a ring $A$.}
-\nm{$\SL_2$}{The reductive affine algebraic group scheme
+\nomenclature{$\Set$}{The (small) category of Sets}
+\nomenclature{$\Set$}{The (small) category of Sets}
+\nomenclature{$\Hilb_{X}$}{The hilbert scheme of $X$ representing the moduli of finite length subschemes of $X$.}
+%\nomenclature{$\shfcoH{X,\shf{I},n}$}{The $n$th cohomology of the sheaf $\shf{I}$ over the space $X$}.
+\nomenclature{$\grpring{Z}{G}$}{The group ring of $G$}
+\nomenclature{$\Bun G$}{The moduli space of $G$ bundles.}
+\nomenclature[coh]{$\dualmod{M}$}{The dual module $\Hom{A}(M,A)$ associated to an object $M \in \ModCat{A}$ for some ring $A$}
+\nomenclature{$\LModCat{A}$}{The category of left modules over a ring $A$.}
+\nomenclature{$\RModCat{A}$}{The category of right modules over a ring $A$.}
+\nomenclature{$\Schemes$}{The category of Schemes}
+\nomenclature{$\NoethSch$}{The category of Noetherian Schemes}
+\nomenclature{$\NoethIntSch$}{The category of Integral Noetherian Schemes}
+\nomenclature{$\Sch{\grk}$}{The category of Schemes defined over $\grk$}
+\nomenclature{$\IndSch{\grk}$}{The category of IndSchemes defined over $\grk$}
+\nomenclature{$\ModCat{A}$}{The category of modules over a ring $A$.}
+\nomenclature{$\SL_2$}{The reductive affine algebraic group scheme
   associated to the Special Linear Group of invertible determinant $1$ matrices
   i.e.\ the fiber $det^{-1}(-1)$ in $\Mat{2}$. Equivalently characterized via a
   \textit{functor of points} formalism e.g.\ $\grkAlg \rightarrow \Set$
 represented in $\ZAlg$ by $\grpring{\Z}{\SL_2} \isom$ }
   %\polyring{Z}{4}\ov{\idealgenby{z_1z_3 - z_2z_4 - 1}}$}
-\nm{$G$}{A reductive group.}
-\nm{$\ringint$}{The local ring $\klocint$ ring of formal power series.}
+\nomenclature{$G$}{A reductive group.}
+\nomenclature{$\ringint$}{The local ring $\klocint$ ring of formal power series.}
 % TODO frame as localization / indsystem
-\nm{$\grk$}{The ground field,
+\nomenclature{$\grk$}{The ground field,
   often the complex numbers $\C$, and
   almost always embedded in the total field
   $K$.}
-%\nm[\ageom]{$\Spec{A}, \Specf{A\fpowerser}$}{The respective Prime and formal spectra of the commutative rings $A$ and $A\fpowerser$}
-%\nm{$I,\idshf{I}$}{For an ideal $I$ in a commutative ring $A$,
+%\nomenclature[\ageom]{$\Spec{A}, \Specf{A\fpowerser}$}{The respective Prime and formal spectra of the commutative rings $A$ and $A\fpowerser$}
+%\nomenclature{$I,\idshf{I}$}{For an ideal $I$ in a commutative ring $A$,
 %$\idshf{I}$ denotes the associated ideal sheaf on $\Spec{A}$}
-%\nm{$\projline$}{The projective line as algebro-geometric object, for
+%\nomenclature{$\projline$}{The projective line as algebro-geometric object, for
 %example, as represented in the functor-of-points yoga by two copies of $\Z[x]$
 %glued along a common $\Z\laurentpoly$ }
-%\nm[\seccfm]{$\K$}{The abstract total field}
-%\nm[\ageom]{$\polyring{R}{n}$}{The ring of $R$-valued polynomials in the
+%\nomenclature[\seccfm]{$\K$}{The abstract total field}
+%\nomenclature[\ageom]{$\polyring{R}{n}$}{The ring of $R$-valued polynomials in the
 %formal variables $z_1,\ldots,z_n$ valued in the ring $R$.}
-%\nm{$G$}{A reductive group.}
+%\nomenclature{$G$}{A reductive group.}
 % algebraic fields, formal power series and their fraction fields
-%\nm[\ageom]{$\ringint$}{The local ring $\klocint$ ring of formal power
+%\nomenclature[\ageom]{$\ringint$}{The local ring $\klocint$ ring of formal power
 %series valued in $k$; equivalently, the ring of integers of the
 %completed local field.}
-%\nm[\ageom]{$\grk$}{The ground field,
+%\nomenclature[\ageom]{$\grk$}{The ground field,
 %  often the complex numbers $\C$, and
 %  almost always embedded in the total field
 %  $K$.}
-%\nm[\ageom]{$\Klocfrac$}{The field
+%\nomenclature[\ageom]{$\Klocfrac$}{The field
 %  of laurent series valued in $K$; equivalently, the fraction field of
 %$\ringint$.}
-%\nm{$\Z$}{The ring of integers}
-%\nm{$\Q$}{The rational number field}
-%\nm{$\R$}{The real number field}
-%\nm{$\C$}{The complex number field}
-%\nm{$ \FnS $}{Function field of a curve $\Sigma$ defined over $\grk$ }
-%\nm{$\classgrp{\grk}$}{The class formation group associated to $\grk$.}
-%\nm{$\F_p$}{A finite field of $p$ elements; for example the
-%\nm{$\D = \D_a$}{The formal disc defined over $\grk$ with the
+%\nomenclature{$\Z$}{The ring of integers}
+%\nomenclature{$\Q$}{The rational number field}
+%\nomenclature{$\R$}{The real number field}
+%\nomenclature{$\C$}{The complex number field}
+%\nomenclature{$ \FnS $}{Function field of a curve $\Sigma$ defined over $\grk$ }
+%\nomenclature{$\classgrp{\grk}$}{The class formation group associated to $\grk$.}
+%\nomenclature{$\F_p$}{A finite field of $p$ elements; for example the
+%\nomenclature{$\D = \D_a$}{The formal disc defined over $\grk$ with the
 %distinguished $\pt = a$ labeling the origin.}
-%\nm{$\Gr$ }{The affine grassmannian of $G$.}
-%\nm{$\Ga$}{The additive group as commutative reductive algebraic group}
-%\nm{$\Set$}{The (small) category of Sets}
-%\nm{$\Qp$}{The fraction field of the ring of $p$-adic integers, i.e. $\Frac{\Zp}$}
-%\nm{$\Zp$}{The inverse limit of the inverse system of rings $\Z \ov{p^n \Z}$,
-%\nm[\seccfm]{$\A$}{The category of commutative indschemes over a ring $\grk$}
-%\nm[\seccfm]{$\FinIndSch$}{The category of \textit{finite} $\Ind$-Schemes}
-%\nm[\seccfm]{$\FinIndProSch$}{The category of \textit{finite} $\IndPro$-Schemes}
-%\nm{$\Hilb_{X}$}{The hilbert scheme of $X$ representing the moduli of finite length subschemes of $X$.}
-%%\nm{$\shfcoH{X,\shf{I},n}$}{The $n$th cohomology of the sheaf $\shf{I}$ over the space $X$}.
-%\nm[\seccfm]{$\Vec_{\grk}$}{Category of Vector Spaces over $\grk$}
-%\nm[\seccfm]{$\divisor{p},\divisoridshf{\divisor{p}}$}{A divisor on some ambient space
+%\nomenclature{$\Gr$ }{The affine grassmannian of $G$.}
+%\nomenclature{$\Ga$}{The additive group as commutative reductive algebraic group}
+%\nomenclature{$\Set$}{The (small) category of Sets}
+%\nomenclature{$\Qp$}{The fraction field of the ring of $p$-adic integers, i.e. $\Frac{\Zp}$}
+%\nomenclature{$\Zp$}{The inverse limit of the inverse system of rings $\Z \ov{p^n \Z}$,
+%\nomenclature[\seccfm]{$\A$}{The category of commutative indschemes over a ring $\grk$}
+%\nomenclature[\seccfm]{$\FinIndSch$}{The category of \textit{finite} $\Ind$-Schemes}
+%\nomenclature[\seccfm]{$\FinIndProSch$}{The category of \textit{finite} $\IndPro$-Schemes}
+%\nomenclature{$\Hilb_{X}$}{The hilbert scheme of $X$ representing the moduli of finite length subschemes of $X$.}
+%%\nomenclature{$\shfcoH{X,\shf{I},n}$}{The $n$th cohomology of the sheaf $\shf{I}$ over the space $X$}.
+%\nomenclature[\seccfm]{$\Vec_{\grk}$}{Category of Vector Spaces over $\grk$}
+%\nomenclature[\seccfm]{$\divisor{p},\divisoridshf{\divisor{p}}$}{A divisor on some ambient space
 %along with its ideal sheaf}
-%\nm[\seccfm]{$\AJ$}{The Abel Jacobi map taking a divisor $\divisor{p}$
+%\nomenclature[\seccfm]{$\AJ$}{The Abel Jacobi map taking a divisor $\divisor{p}$
 %  supported on a space $X$ to $\AJ: \divisor{p} \mapsto \ringint_{X}
 %(-\divisor{p})\divisoridshf{I_{\divisor{p}}}$}
-%\nm[\seccfm]{$\IndProSch$}{The category of $\Ind$-$\Pro$-Schemes}
-%\nm[\seccoh]{$\grpring{Z}{G}$}{The group ring of $G$}
-%\nm[\seccoh]{$\Bun G$}{The moduli space of $G$ bundles.}
-%\nm[coh]{$\dualmod{M}$}{The dual module $\Hom{A}(M,A)$ associated to an object $M \in \ModCat{A}$ for some ring $A$}
-%\nm{$\LModCat{A}$}{The category of left modules over a ring $A$.}
-%\nm{$\RModCat{A}$}{The category of right modules over a ring $A$.}
-%\nm[\secindobj]{$\Schemes$}{The category of Schemes}
-%\nm[\secgaugetheory]{$\SL_2$}{The reductive affine algebraic group scheme
+%\nomenclature[\seccfm]{$\IndProSch$}{The category of $\Ind$-$\Pro$-Schemes}
+%\nomenclature[\seccoh]{$\grpring{Z}{G}$}{The group ring of $G$}
+%\nomenclature[\seccoh]{$\Bun G$}{The moduli space of $G$ bundles.}
+%\nomenclature[coh]{$\dualmod{M}$}{The dual module $\Hom{A}(M,A)$ associated to an object $M \in \ModCat{A}$ for some ring $A$}
+%\nomenclature{$\LModCat{A}$}{The category of left modules over a ring $A$.}
+%\nomenclature{$\RModCat{A}$}{The category of right modules over a ring $A$.}
+%\nomenclature[\secindobj]{$\Schemes$}{The category of Schemes}
+%\nomenclature[\secgaugetheory]{$\SL_2$}{The reductive affine algebraic group scheme
 %  associated to the Special Linear Group of invertible determinant $1$ matrices
 %  i.e.\ the fiber $det^{-1}(-1)$ in $\Mat{2}$. Equivalently characterized via a
 %  \textit{functor of points} formalism e.g.\ $\grkAlg \rightarrow \Set$
 %  represented in $\ZAlg$ by $\grpring{\Z}{\SL_2} \isom
 %  \polyring{Z}{4}\ov{\idealgenby{z_1z_3 - z_2z_4 - 1}}$}
-%\nm[\secindobj]{$\NoethSch$}{The category of Noetherian Schemes}
-%\nm[\secindobj]{$\NoethIntSch$}{The category of Integral Noetherian Schemes}
-%\nm[\secindobj]{$\Sch{\grk}$}{The category of Schemes defined over $\grk$}
-%\nm[\secindobj]{$\IndSch{\grk}$}{The category of IndSchemes defined over $\grk$}
-%\nm[\secindobj]{$\ModCat{A}$}{The abelian category of modules over a
+%\nomenclature[\secindobj]{$\NoethSch$}{The category of Noetherian Schemes}
+%\nomenclature[\secindobj]{$\NoethIntSch$}{The category of Integral Noetherian Schemes}
+%\nomenclature[\secindobj]{$\Sch{\grk}$}{The category of Schemes defined over $\grk$}
+%\nomenclature[\secindobj]{$\IndSch{\grk}$}{The category of IndSchemes defined over $\grk$}
+%\nomenclature[\secindobj]{$\ModCat{A}$}{The abelian category of modules over a
 %%%%%%%%%%%%%%%%%%%%%%%%%%
-%% %\nm[\secgaugetheory] %%
+%% %\nomenclature[\secgaugetheory] %%
 %%
 %%
-%%\nm{$\hcoH{G,A,n}$}{blah}
-%\nm{$\Gm$}{The multiplicative group as commutative reductive algebraic group.}
-%\nm{$\lpgrass$}{The classical loop grassmannian of $G$.}
-%\nm{$\glpgrass$}{The \textit{generalized} loop grassmannian of $G$}
-%\nm[\seccfm]{$\Flds$}{The Category of Fields}
-%\nm[\seccfm]{$\cartdual$}{Cartier duality on a category } % TODO say more}
-%\nm{$\Mat{n}\grk$}{$n\times n$ matrices with coefficients in $\grk$}
-%\nm{$\RH^*$}{Right derived functor of homology}
-%\nm{$X\tateshiftedby{n}$}{The $n$th Tate Shift}
-%\nm{$\TateCat$}{The tate category associated to a finite
+%%\nomenclature{$\hcoH{G,A,n}$}{blah}
+%\nomenclature{$\Gm$}{The multiplicative group as commutative reductive algebraic group.}
+%\nomenclature{$\lpgrass$}{The classical loop grassmannian of $G$.}
+%\nomenclature{$\glpgrass$}{The \textit{generalized} loop grassmannian of $G$}
+%\nomenclature[\seccfm]{$\Flds$}{The Category of Fields}
+%\nomenclature[\seccfm]{$\cartdual$}{Cartier duality on a category } % TODO say more}
+%\nomenclature{$\Mat{n}\grk$}{$n\times n$ matrices with coefficients in $\grk$}
+%\nomenclature{$\RH^*$}{Right derived functor of homology}
+%\nomenclature{$X\tateshiftedby{n}$}{The $n$th Tate Shift}
+%\nomenclature{$\TateCat$}{The tate category associated to a finite
 %  abelian group $H$, defined as the categorical quotient
 %  $\mathcal{A}^G_{N_G(\mathcal{A}}$}
-%\nm{$\B{G}$}{everyone's favourite quotient category}
-%\nm{$\ptmod{G}$}{everyone's favourite quotient category}
-\nm{$\DMod (X)$}{The category $\DMod$ of $D$-modules defined on $X$}
-\nm{$\IndSt$}{The Category of Ind-Stacks}
-\nm{$\IndNSt$}{The Category of Ind-\textsc{N}-Stacks}
+%\nomenclature{$\B{G}$}{everyone's favourite quotient category}
+%\nomenclature{$\ptmod{G}$}{everyone's favourite quotient category}
+\nomenclature{$\DMod (X)$}{The category $\DMod$ of $D$-modules defined on $X$}
+\nomenclature{$\IndSt$}{The Category of $\Ind$-Stacks}
+\nomenclature{$\IndNSt$}{The Category of $\Ind$-$N$-Stacks}
