--- a/main.tex
+++ b/main.tex
@@ -1,11 +1,9 @@
 \documentclass[12pt]{amsart}
 
-\input{subsections.tex}
 \input{preamble.tex}
+\input{subsections.tex}
 \input{mathmacros.tex}
-\input{notation.tex}
 \input{authors.tex}
-\input{nomenclature.tex}
 
 \title{\AmSTeX Project Template}
 
@@ -18,6 +16,8 @@
   \input{abstract.tex}
   \maketitle
   \tableofcontents
+  \mbox{}
+  \input{nomenclature.tex}
   \printnomenclature
 
   %%%%%%%%%%%%%%%%%%%%%%
