fixed bug 'mathbb' -> 'mathbf'

--- a/commands.tex
+++ b/commands.tex
@@ -157,7 +157,7 @@
 %% mathematics-symbols
 \newcommand\mc[1]{\mathcal{#1}}
 \newcommand\mbb[1]{\mathbb{#1}}
-\newcommand\mbf[1]{\mathbb{#1}}
+\newcommand\mbf[1]{\mathbf{#1}}
 
 % mathematics-algebra extensions
 \nc\lb{\left[} \nc\rb{\right]}
