new environments {qn, ans} + extended TEXDEBRIS

--- a/preamble.tex
+++ b/preamble.tex
@@ -130,6 +130,11 @@
 \newtheorem{ex}[thm]{Example}
 \newtheorem{exc}[thm]{Exercise}
 \newtheorem{conj}[thm]{Conjecture}
+\newtheorem{prob}[thm]{Problem}
+\newtheorem{oprob}[thm]{Open Problem}
+\newtheorem{stmt}[thm]{Statement}
+\newtheorem{qn}[thm]{Question}
+\newtheorem{ans}[thm]{Answer}
 
 %%%%%%%%%%%%%%%%%%
 %% Nomenclature %%
