--- a/mathmacros.tex
+++ b/mathmacros.tex
@@ -14,6 +14,7 @@
 \newcommand\mc[1]{\mathcal{#1}}
 \newcommand\mbb[1]{\mathbb{#1}}
 \newcommand\mbf[1]{\mathbb{#1}}
+\newcommand\mrm[1]{\mathrm{#1}}
 
 \newcommand\image[1]{
   \begin{figure}[H]\label{fig-#1}
