--- a/notation.tex
+++ b/notation.tex
@@ -353,3 +353,7 @@
 \nc\Locvbpos{\{V_p\}_{p \in P}}
 %\nc\IxCHilb{\Hilb_{\Curve \times I}}
 %\nc\locLb{\mc{L}_{I,Q}}
+
+% Roq lecture
+\nc\Perv{\Cat{Perv}}
+\nc\B{\mbf{B}}
